<resources>
    <string name="app_name">Parky</string>
    <string name="title_activity_maps">Parky</string>
    <string name="PlatkiParking">Plati parking</string>
    <string name="Parkiraj">Parkiraj</string>
    <string name="PlatiParking">Plati</string>
    <string name="OdabirGrada">Odabir grada</string>
    <string name="Plati">Plati</string>
    <string name="title_activity_main">Parky</string>
    <string name="Vrijeme">Vrijeme</string>
    <string name="Grad">Grad</string>
    <string name="ParkinZona">Parking zona</string>
    <string name="Cijena">Cijena</string>
    <string name="OdabranoTrajanje">Odabrano trajanje</string>
    <string name="Registracija">Registarska oznaka</string>
    <string name="MaxTrajanje">Maksimalno trajanje</string>
    <string name="Novi">Novi</string>
    <string name="title_activity_new_car">NewCar</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Ikona">Ikona</string>
</resources>
